# Coursework

./: .coverage  .editorconfig  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: formatting.yml  ruff.yml
249039503/test/blackbox/category_partitioning/: arithmetic_oper_test  arithmetic_oper_test.tsl  arithmetic_operations.py  arithmetic_operations_test  arithmetic_operations_test.tsl  break_loop.py  break_loop_test  break_loop_test.tsl  comment_write_test  comment_write_test.tsl  comment_writing_test  comment_writing_test.tsl  (+19 more)
249053812/test/: coverage_report.txt
259045253/test/blackbox/: coverage.txt  coverage_log.txt
259045253/test/whitebox/: coverage.txt  coverage_log.txt
259046521/: quicktest
259046521/test/whitebox/: cov_report.html  cov_report.xml  pynguin-cli-params.txt  pynguin-config.toml  pynguin-config.txt  statistics.csv
examples/: booleans.smqa  functions.smqa  hello-world.smqa  loops.smqa
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_evaluator_py.html  z_145eef247bfb46b6_lexer_py.html  z_145eef247bfb46b6_parser_py.html  z_145eef247bfb46b6_tokens_py.html
pynguin-report/: cov_report.html  cov_report.xml  pynguin-cli-params.txt  pynguin-config.toml  pynguin-config.txt  statistics.csv
pynguin-report/signatures/evaluator/: evaluator_result.json
pynguin-report/signatures/src/: src_result.json
src/: __init__.py  evaluator.py  lexer.py  main.py  mytoken.py  parser copy.py  parser.py  quicktest  token.py  tokens.py
(+313 files in other folders)
