[project]
name = "smqa-coursework"
version = "0.1.0"
description = "An interpreter for simple programming language developed for Software Measurement and Quality Assurance coursework."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coverage>=7.13.0",
    "fuzzingbook==0.9.5",
    "pynguin>=0.44.0",
    "z3-solver>=4.15.4.0",
]
