[project]
name = "smqa-coursework"
version = "0.1.0"
description = "An interpreter for simple programming language developed for Software Measurement and Quality Assurance coursework."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astor==0.8.1",
    "coverage>=7.13.0",
    "fuzzingbook==0.9.5",
    "graphviz==0.21",
    "markdown==3.10",
    "pynguin>=0.44.0",
    "z3-solver>=4.15.4.0",
]
